--- a/client/index.html
+++ b/client/index.html
@@ -6,19 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Chat App</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" media="screen" href="ios.css" />
   <script src="/socket.io/socket.io.js"></script>
 </head>
 
 <body>
-  <main>
-    <section>
-      <p>Hey 😊</p>
-      <br />
-      <p>Hi there!</p>
-      <br />
-    </section>
-    <div>
+  <input id="useer" type="text">
       <form>
         <div>
           <input id="message">
@@ -27,8 +19,11 @@
           <button>Send</button>
         </div>
       </form>
-    </div>
-  </main>
+
+
+
+
+   
   <script src="main.js"></script>
 </body>
 
