--- a/client/index.html
+++ b/client/index.html
@@ -6,11 +6,19 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Chat App</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" media="screen" href="ios.css" />
   <script src="/socket.io/socket.io.js"></script>
 </head>
 
 <body>
-  <input id="useer" type="text">
+  <main>
+    <section>
+      <p>Hey 😊</p>
+      <br />
+      <p>Hi there!</p>
+      <br />
+    </section>
+    <div>
       <form>
         <div>
           <input id="message">
@@ -19,11 +27,8 @@
           <button>Send</button>
         </div>
       </form>
-
-
-
-
-   
+    </div>
+  </main>
   <script src="main.js"></script>
 </body>
 
