--- a/client/index.html
+++ b/client/index.html
@@ -13,9 +13,7 @@
 <body>
   <main>
     <section>
-      <p>Hey 😊</p>
-      <br />
-      <p>Hi there!</p>
+    <input id="useer" type="text">
       <br />
     </section>
     <div>
