--- a/client/index.html
+++ b/client/index.html
@@ -19,6 +19,36 @@
   <script src="js/aframe-text-geometry-component.min.js"></script>
       <script src="indexpoke.js"></script>
       <script src="js/ascensorpok.js"></script>
+
+      <style>
+      .inputy{
+        background-color: rgb(245, 152, 152);
+        opacity: 0.7;
+        border: solid 0.1px transparent;
+        border-radius: 20%;
+        width: 15rem;
+        height: 2.5rem;
+        margin-top: 0.4rem;
+        margin-left: 0.7rem;
+        font-size: 32pt;
+        color: red !important;
+      }
+      .inputy22{
+        background-color: rgb(245, 152, 152);
+        opacity: 0.7;
+        border: solid 0.1px transparent;
+        border-radius: 20%;
+        width: 15rem;
+        height: 2.5rem;
+        margin-top: 0.4rem;
+        margin-left: 0.7rem;
+        font-size: 15pt;
+        color: red !important;
+      }
+      .inputy2{
+        background-color: transparent !important;
+      }
+      </style>
 </head>
 <body onload="saltarr(); saltyf(); supersalt();">
   <a-scene id="scene" background="" debug="" physics="debug: true" class="fullscreen" canvas="" inspector="" keyboard-shortcuts="" screenshot="" vr-mode-ui="" auto-enter-vr="">
@@ -102,10 +132,16 @@
 <a-entity id="bulbasur" position="12 0.1 -14" rotation="0 -135 0" obj-model="obj: url(objets//bulbasur/bulbasaur-pokemon-go.obj); mtl: url(objets//bulbasur/bulbasaur-pokemon-go.mtl)" material="color:yellow" scale="0.15 0.15 0.15"></a-entity>
 <a-entity id="charizar" position="46 0 -31" rotation="0 -45 0" obj-model="obj: url(https://abc3developer.github.io/Pokemon-VR/objets/charizar/charizard-pokemon-go.obj); mtl: url(https://abc3developer.github.io/Pokemon-VR/objets/charizar/charizard-pokemon-go.mtl)" scale="1 1 1"></a-entity>
 
+<button class="inputy inputy2">
+  <input class="inputy" type="text" placeholder="Name:">
+  <div id="latitud" class="inputy22"></div>
+  <div id="longitud" class="inputy22"></div>
+</button>
 
 <div class="a-enter-vr" aframe-injected=""><button class="a-enter-vr-button" aframe-injected=""></button></div>
 <div class="a-enter" aframe-injected="">
 <input id="useer" type="text">
+
 <form>
         <div>
           <input id="message">
