--- a/client/index.html
+++ b/client/index.html
@@ -47,11 +47,12 @@
       .inputy2{
         background-color: transparent !important;
       }
+      #sky{display:none;}
       </style>
 </head>
 <body onload="saltarr(); saltyf(); supersalt();">
   <a-scene id="scene" background="" debug="" physics="debug: true" class="fullscreen" canvas="" inspector="" keyboard-shortcuts="" screenshot="" vr-mode-ui="" auto-enter-vr="">
-    <a-sky radius="10000" material="src: materials/spaciosss.png;"></a-sky>
+    <a-sky id="sky" radius="10000" material="src: materials/spaciosss.png;"></a-sky>
 <a-entity id="sol" position="-2500 7000 -4000" rotation="105 30 0" obj-model="obj: url(objets/asteroids2.obj); mtl: url(objets/asteroids2.mtl)" scale="800 800 800">
 <a-light type="point" angle="60" intensity="0.3" position="0 -10000 0"></a-light>  
 <a-light type="ambient" intensity="1.2" position="0 0 0"></a-light>  
@@ -155,7 +156,11 @@
 </a-scene>
   <script src="main.js"></script>
   <script>
-  
+  var sky = document.querySelector('#sky');
+  setTimeout(() => {
+    sky.style.display = "flex";
+    console.log('sky.flex');
+  }, 10000);
   </script>
 </body>
 </html>
