--- a/client/index.html
+++ b/client/index.html
@@ -133,15 +133,14 @@
 <a-entity id="charizar" position="46 0 -31" rotation="0 -45 0" obj-model="obj: url(https://abc3developer.github.io/Pokemon-VR/objets/charizar/charizard-pokemon-go.obj); mtl: url(https://abc3developer.github.io/Pokemon-VR/objets/charizar/charizard-pokemon-go.mtl)" scale="1 1 1"></a-entity>
 
 
-<a-entity id="selecuseer1" position="-10 4 15" text-geometry="value:RED" width="1" material="color:red;" selecuseer1-events></a-entity>
+<a-entity id="selecuseer1" position="-10 2 7" text-geometry="value:RED" width="1" material="color:red;" selecuseer1-events></a-entity>
 
-<a-entity id="selecuseer2" position="-12 4 15" text-geometry="value:BLUE" width="1" material="color:blue;" selecuseer2-events></a-entity>
-
-
+<a-entity id="selecuseer2" position="-12 2 7" text-geometry="value:BLUE" width="1" material="color:blue;" selecuseer2-events></a-entity>
 
 
-<div class="a-enter-vr" aframe-injected=""><button id="btnuseer1" class="a-enter-vr-button" aframe-injected=""></button></div>
-<div class="a-enter-vr" aframe-injected=""><button id="btnuseer2" class="a-enter-vr-button" aframe-injected=""></button></div>
+
+
+<div class="a-enter-vr" aframe-injected="" style="z-index:9999"><button id="btnuseer" class="a-enter-vr-button" aframe-injected="" style="z-index:9999"></button></div>
 
  <button>
 <form>
