--- a/client/index.html
+++ b/client/index.html
@@ -140,16 +140,14 @@
 
 
 
-<div class="a-enter-vr" aframe-injected="" style="z-index:9999"><button id="btnuseer" class="a-enter-vr-button" aframe-injected="" style="z-index:9999"></button></div>
-
- <button>
-<form>
-  <input id="message" class="inputy22">
-  <button>Send</button class="inputy22">
+<div class="a-enter-vr" aframe-injected="" style="z-index:9999"><button id="btnuseer" class="a-enter-vr-button" aframe-injected="" style="z-index:9999">
+<form onload="event.preventDefault();" onsubmit="event.preventDefault();">
+  <input id="message" class="inputy22" onload="event.preventDefault();"  onsubmit="event.preventDefault();">
+  <button onload="event.preventDefault();" onclick="event.preventDefault();" onsubmit="event.preventDefault();">Send</button class="inputy22">
 </form>
-</button>
+</button></div>
 
-
+ 
 
 </a-scene>
   <script src="main.js"></script>
