--- a/client/index.html
+++ b/client/index.html
@@ -141,6 +141,9 @@
 
 
 <div class="a-enter-vr" aframe-injected="" style="z-index:9999"><button id="btnuseer" class="a-enter-vr-button" aframe-injected="" style="z-index:9999">
+ <section>
+  <div id="newmens"></div>   
+    </section>
 <form onload="event.preventDefault();" onsubmit="event.preventDefault();">
   <input id="message" class="inputy22" onload="event.preventDefault();"  onsubmit="event.preventDefault();">
   <button onload="event.preventDefault();" onclick="event.preventDefault();" onsubmit="event.preventDefault();">Send</button class="inputy22">
