--- a/client/index.html
+++ b/client/index.html
@@ -50,10 +50,11 @@
       #btnuseer12{background-color: red}
       #btnuseer24{background-color: blue}
       #btnuseer00{}
+      #scene{display:none}
       </style>
        <link rel="stylesheet" type="text/css" media="screen" href="ios.css" />
 </head>
-<body onload="saltarr(); saltyf(); supersalt();">
+<body onload="saltarr(); saltyf(); supersalt(); tiemsce();">
   <a-scene id="scene" background="" debug="" physics="debug: true" class="fullscreen" canvas="" inspector="" keyboard-shortcuts="" screenshot="" vr-mode-ui="" auto-enter-vr="">
     <a-sky id="sky" radius="10000" material="src: materials/spaciosss.png;"></a-sky>
 <a-entity id="sol" position="-2500 7000 -4000" rotation="105 30 0" obj-model="obj: url(objets/asteroids2.obj); mtl: url(objets/asteroids2.mtl)" scale="800 800 800">
@@ -177,6 +178,12 @@
 
  <script src="main.js"></script>
 <script>
+function tiemsce() {
+  var scene = document.querySelector('#scene');
+  setTimeout(() => {
+    scene.style.display = 'flex';
+  }, 30000);
+}
 var colorbtn = document.querySelector('#colorbtn');
 var btnuseer12 = document.querySelector('#btnuseer12');
 var btnuseer24 = document.querySelector('#btnuseer24');
