--- a/client/index.html
+++ b/client/index.html
@@ -138,7 +138,8 @@
 <a-entity id="charizar" position="46 0 -31" rotation="0 -45 0" obj-model="obj: url(https://abc3developer.github.io/Pokemon-VR/objets/charizar/charizard-pokemon-go.obj); mtl: url(https://abc3developer.github.io/Pokemon-VR/objets/charizar/charizard-pokemon-go.mtl)" scale="1 1 1"></a-entity>
 
 
-<a-entity id="playeronline" position="12 1.8 -14" rotation="0 -45 0" obj-model="obj: url(object2/pikachu/pikachu-pokemon-go.obj); mtl: url(object2/pikachu/pikachu-pokemon-go.mtl)" material="color:yellow" scale="0.03 0.03 0.03"></a-entity>
+<a-entity id="playeronline1" position="12 1.8 -14" rotation="0 -45 0" obj-model="obj: url(object2/pikachu/pikachu-pokemon-go.obj); mtl: url(object2/pikachu/pikachu-pokemon-go.mtl)" material="color:yellow" scale="0.03 0.03 0.03"></a-entity>
+<a-entity id="playeronline2" position="12 1.8 -14" rotation="0 -45 0" obj-model="obj: url(object2/pikachu/pikachu-pokemon-go.obj); mtl: url(object2/pikachu/pikachu-pokemon-go.mtl)" material="color:yellow" scale="0.03 0.03 0.03"></a-entity>
 
  
 <button class="a-enter-vr-button" aframe-injected="">
