--- a/client/index.html
+++ b/client/index.html
@@ -138,8 +138,8 @@
 <a-entity id="charizar" position="46 0 -31" rotation="0 -45 0" obj-model="obj: url(https://abc3developer.github.io/Pokemon-VR/objets/charizar/charizard-pokemon-go.obj); mtl: url(https://abc3developer.github.io/Pokemon-VR/objets/charizar/charizard-pokemon-go.mtl)" scale="1 1 1"></a-entity>
 
 
-<a-entity id="playeronline1" position="12 1.8 -14" rotation="0 -45 0" obj-model="obj: url(object2/pikachu/pikachu-pokemon-go.obj); mtl: url(object2/pikachu/pikachu-pokemon-go.mtl)" material="color:yellow" scale="0.03 0.03 0.03"></a-entity>
-<a-entity id="playeronline2" position="12 1.8 -14" rotation="0 -45 0" obj-model="obj: url(object2/pikachu/pikachu-pokemon-go.obj); mtl: url(object2/pikachu/pikachu-pokemon-go.mtl)" material="color:yellow" scale="0.03 0.03 0.03"></a-entity>
+<a-box id="playeronline1" position="12.5 4 -27.8" rotation="0 0 0" material="src: materials/materialmetal1.jpg;repeat:;color:rgba(111, 141, 153, 0.781);" depth="1" width="1" height="3" static-body></a-box>
+<a-box id="playeronline2" position="12.5 4 -27.8" rotation="0 0 0" material="src: materials/materialmetal1.jpg;repeat:;color:rgba(111, 141, 153, 0.781);" depth="1" width="1" height="3" static-body></a-box>
 
  
 <button class="a-enter-vr-button" aframe-injected="">
