--- a/client/index.html
+++ b/client/index.html
@@ -145,6 +145,9 @@
 <button class="a-enter-vr-button" aframe-injected="">
 <main>
     <section id="section">
+    <p id="newMessage1"></p>
+    <br>
+        <p id="newMessage2"></p>
     </section>
     <div>
       <form>
