--- a/client/index.html
+++ b/client/index.html
@@ -20,38 +20,16 @@
       <script src="indexpoke.js"></script>
       <script src="js/ascensorpok.js"></script>
       <style>
-      input{min-width: 1rem}
-      .inputy{
-        background-color: rgb(245, 152, 152);
-        opacity: 0.7;
-        border: solid 0.1px transparent;
-        border-radius: 20%;
-        width: 15rem;
-        height: 2.5rem;
-        margin-top: 0.4rem;
-        margin-left: 0.7rem;
-        font-size: 32pt;
-        color: red !important;
-      }
-      .inputy22{
-        background-color: rgb(245, 152, 152);
-        opacity: 0.7;
-        border: solid 0.1px transparent;
-        border-radius: 20%;
-        width: 15rem;
-        height: 2.5rem;
-        margin-top: 0.4rem;
-        margin-left: 0.7rem;
-        font-size: 15pt;
-        color: red !important;
-      }
-      .inputy2{
-        background-color: transparent !important;
-      }
-      #btnuseer12{background-color: red}
-      #btnuseer24{background-color: blue}
-      #btnuseer00{}
       #scene{display:none}
+      #btncolor{
+      background-color: green;
+      min-width: 1rem;
+    min-height: 1rem;
+    }
+    #btnck{
+      min-width: 1rem;
+      min-height: 1rem;
+    }
       </style>
        <link rel="stylesheet" type="text/css" media="screen" href="ios.css" />
 </head>
@@ -142,74 +120,37 @@
 <a-box id="playeronline2" position="-10 1.5 3" rotation="0 0 0" material="src: materials/materialmetal1.jpg;repeat:;color:rgba(111, 141, 153, 0.781);" depth="1" width="1" height="3" ></a-box>
 
  
-<button class="a-enter-vr-button" aframe-injected="">
-<main>
-    <section id="section">
-    <p id="newMessage1"></p>
-    <br>
-        <p id="newMessage2"></p>
-    </section>
-    <div>
-      <form>
-        <div>
-          <input id="message">
-        </div>
-        <div>
-          <input id="form" type="checkbox">
-        </div>
-      </form>
-    </div>
-  </main>
-</button>
 </a-scene>
- 
-  <button id="btnuseer12" onclick="event.preventDefault(); btnuser1();">red</button>
- <button id="btnuseer24" onclick="event.preventDefault(); btnuser2();">blue</button>
-<div id="colorbtn">COLOR</div>
- 
-  <input id="scentrue" type="checkbox">
+
+<button style="background-color: red;" onclick="ab12();">red</button>
+<button style="background-color: blue;" onclick="ab24();">blue</button>
+<p id="btncolor">color</p>
+<input type="checkbox" name="" id="scenetrue">
+<main>
+  <section>
+  </section>
+  <div>
+    <form>
+      <div>
+        <input id="message">
+      </div>
+      <div>
+        <input id="btnck" type="checkbox" name="">
+      </div>
+    </form>
+  </div>
+</main>
 
  <script src="main.js"></script>
  
 <script>
+   var scenetrue = document.querySelector('#scenetrue');
  var scene = document.querySelector('#scene');
  
-var player = document.querySelector('#player');
-
-function tiemsce() {
+scenetrue.addEventListener('change', function () {
   scene = document.querySelector('#scene');
-  setTimeout(() => {
     scene.style.display = 'flex';
-  }, 500000);
-}
-var colorbtn = document.querySelector('#colorbtn');
-var btnuseer12 = document.querySelector('#btnuseer12');
-var btnuseer24 = document.querySelector('#btnuseer24');
-
-function btnuser1() {
-btnuseer12 = document.querySelector('#btnuseer12');
-colorbtn = document.querySelector('#colorbtn');
-colorbtn.style.backgroundColor = 'red';
-}
-function btnuser2() {
-btnuseer24 = document.querySelector('#btnuseer24');
-colorbtn = document.querySelector('#colorbtn');
-colorbtn.style.backgroundColor = 'blue';
-}
-
-
-
-
-
-var scentrue = document.querySelector('#scentrue');
-
-scentrue.addEventListener('change', function () {
-   scene = document.querySelector('#scene');
-   scene.style.display = 'flex';
-   abconline();
 });
-
-
 </script>
 </body>
 </html>
