--- a/client/index.html
+++ b/client/index.html
@@ -34,7 +34,20 @@
        <link rel="stylesheet" type="text/css" media="screen" href="ios.css" />
 </head>
 <body onload="saltarr(); saltyf(); supersalt();">
-
+  <main>
+    <section>
+    </section>
+    <div>
+      <form>
+        <div>
+          <input id="message">
+        </div>
+        <div>
+          <input id="btnck" type="checkbox" name="">
+        </div>
+      </form>
+    </div>
+  </main>
   <a-scene id="scene" background="" debug="" physics="debug: true" class="fullscreen" canvas="" inspector="" keyboard-shortcuts="" screenshot="" vr-mode-ui="" auto-enter-vr="">
     <!--
       <a-sky id="sky" radius="10000" material="src: materials/spaciosss.png;"></a-sky>
