--- a/client/index.html
+++ b/client/index.html
@@ -30,11 +30,18 @@
       min-width: 1rem;
       min-height: 1rem;
     }
+    #abclsss{
+      min-width: 6rem;
+      min-height: 2rem;
+      background-color: red;
+      opacity: 0.4;
+    }
       </style>
        <link rel="stylesheet" type="text/css" media="screen" href="ios.css" />
 </head>
 <body onload="saltarr(); saltyf(); supersalt();">
   <main>
+    <div id="abclsss"></div>
     <section>
     </section>
     <div>
