--- a/client/index.html
+++ b/client/index.html
@@ -83,6 +83,8 @@
 </a-box>
 <a-box id="abc2" position="0 -6.2 0" rotation="0 0 0" width="10000" height="0.5" depth="1000" color="rgba(149, 149, 149, 0.808)" static-body>
 </a-box>
+<a-box id="sueloprincipal" position="0 0.11 0" rotation="0 0 0" material="src: materials/imagenmadera.jpg;repeat:50 50;color:rgba(214, 120, 43, 0.781);" depth="200" width="300" height="0.05" static-body></a-box>
+
 
 <a-box id="playeronline1" position="-14 1.5 3" rotation="0 0 0" material="src: materials/materialmetal1.jpg;repeat:;color:rgba(111, 141, 153, 0.781);" depth="1" width="1" height="3" ></a-box>
 <a-box id="playeronline2" position="-10 1.5 3" rotation="0 0 0" material="src: materials/materialmetal1.jpg;repeat:;color:rgba(111, 141, 153, 0.781);" depth="1" width="1" height="3" ></a-box>
