compr 6sin set interv

--- a/client/index.html
+++ b/client/index.html
@@ -137,6 +137,7 @@ input {
 <a-box id="playeronline1" position="-14 1.5 3" rotation="0 0 0" material="src: materials/materialmetal1.jpg;repeat:;color:rgba(111, 141, 153, 0.781);" depth="1" width="1" height="3" ></a-box>
 <a-box id="playeronline2" position="-10 1.5 3" rotation="0 0 0" material="src: materials/materialmetal1.jpg;repeat:;color:rgba(111, 141, 153, 0.781);" depth="1" width="1" height="3" ></a-box>
 </a-scene>
- <script src="main.js"></script>
+ <script src="main.js">
+ </script>
 </body>
 </html>
